tdf#137571 use XActionGuard to lock blocks that don't need updating

so we can avoid constantly generating new TextForwarders which
are the same as the one they replace.

The underlying problem is that of tdf#123470 but this solution should
be safe to backport

Change-Id: I742f2a9ce0024adf9bd0acc5bb8edb9372fc0af5